# cellular-automaton

./: .gitignore  Cargo.toml  README.md  benchmarks.out  benchmarks_report.py  perf_benchmark.sh  perf_report.py  perf_tests.md  prompt_template.md  result_prompt
benchmark_diffs/: SUMMARY.md  version_0.diff  version_0_info.txt  version_1.diff  version_1_info.txt  version_2.diff  version_2_info.txt  version_3.diff  version_3_info.txt  version_4.diff  version_4_info.txt  version_5.diff  version_5_info.txt  version_6.diff  version_6_info.txt  version_7.diff  version_7_info.txt
src/: cell.rs  grid.rs  lib.rs  main.rs  movement.rs  neighborhood.rs  rules.rs  utils.rs
trait_ac/: Cargo.toml  config.toml  profiling.md  prompt
trait_ac/src/: cell.rs  grid.rs  lib.rs  main.rs  movement.rs  neighborhood.rs  rules.rs  utils.rs
trait_ac_ui/: Cargo.toml  config.toml
trait_ac_ui/src/: color_scheme.rs  config.rs  gpu_renderer.rs  lib.rs  main.rs
trait_ac_ui/src/shaders/: grayscale.glsl  plasma.glsl  redblue.glsl  vertex.glsl  viridis.glsl
